--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-
 {
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "requirejs": "^2.3.6"
   },
   "devDependencies": {
@@ -9,5 +9,4 @@
   "scripts": {
     "test": "jest"
   }
-
 }
