--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "inquirer": "^8.2.0",
     "requirejs": "^2.3.6"
   },
   "devDependencies": {
     "jest": "^27.5.1"
   },
-  "scripts": {
-    "test": "jest"
+    "scripts": {
+    "test": "jest",
+    "start": "node index.js"
   }
 }
